Fix icon selection button height for WP 3.8. Icon sizes have changed once again, so the previous layout no longer works. Also fix sidebar ad wrapping in Internet Explorer.
git-svn-id: https://plugins.svn.wordpress.org/admin-menu-editor/trunk@818940 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/menu-editor.css
+++ b/css/menu-editor.css
@@ -561,6 +561,9 @@ select.ws_dropdown optgroup option {
 	margin: 0;
 	padding: 0;
 	position: relative;
+
+    box-sizing: border-box;
+    height: 25px;
 }
 
 /* Current icon node (CSS class version, for the built-in WP icon sprites) */
@@ -900,7 +903,7 @@ select.ws_dropdown optgroup option {
 }
 
 #ws_sidebar_pro_ad {
-    width: 225px;
+    min-width: 225px;
 
 	margin-top: 5px;
 	margin-left: 3px;
